# codesprint

./: .gitignore  CHANGELOG.md  README.md  check_services.sh  diagnostico_api.json  diagnostico_page.html  docker-compose.yaml  fix_connection.sh  makefile  resposta_diagnostico.txt  start_services.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
backend/: Dockerfile  README.md  README_TROUBLESHOOTING.md  pyproject.toml  run_tests.sh  test_connection.sh
backend/app/: main.py  test_crewai_connection.py
backend/app/services/: crewai.py  network_diagnostics.py
backend/app/tests/: test_crewai.py  test_main.py  test_network_diagnostics.py
crewai/: Dockerfile  README.md  pyproject.toml
crewai/app/: main.py
crewai/app/core/: crewai_generator.py  litellm_adapter.py  llm_client.py
crewai/app/core/agents/: __init__.py  base_agent.py  project_manager_agent.py  specialist_agent.py  utils.py
crewai/app/service/: exa_search.py
frontend/: .dockerignore  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/api/diagnose-manual/: route.ts
frontend/src/app/api/diagnostico/: route.ts
frontend/src/app/api/gerar-projeto/: route.ts
frontend/src/app/api/teste-backend/: route.ts
frontend/src/app/components/: Footer.tsx  InputComponent.tsx  Loading.tsx  Navbar.tsx  ResultadoProjeto.tsx  SelectComponent.tsx  TextareaComponent.tsx
frontend/src/app/diagnostico/: page.tsx
frontend/src/app/diagnostico/manual/: page.tsx
frontend/src/app/gerar-projeto/: page.tsx
frontend/src/app/sobre/: page.tsx
